--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.38",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "@types/cors": "^2.8.12"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.5"
   }
 }
